@@ -1,3 +1,3 @@
 module QueryBuilder
-  VERSION = '0.6.0'
+  VERSION = '0.6.1'
 end
