@@ -5,7 +5,7 @@
 
 Gem::Specification.new do |s|
   s.name = %q{querybuilder}
-  s.version = "0.6.0"
+  s.version = "0.6.1"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Gaspard Bucher"]
